Content added inlcuding brief description of CloudDSF+

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -45,8 +45,8 @@
 				<ul class="nav navbar-nav nav-justified">
 					<li><a href="./index.html"><span><strong>
 									CloudDSF+</strong></span></a></li>
-					<li><a href="./kbNavigator.html"><span>KB
-								Navigator</span> </a></li>
+					<li><a href="./kbNavigator.html"><span>KB Navigator</span>
+					</a></li>
 					<li><a href="./knowledgeBase.html"><span>KB
 								Visualizer</span> </a></li>
 					<li><a href="./cloudDSFVisualizations.html"><span>CloudDSF
@@ -60,15 +60,334 @@
 
 	<!-- Main content -->
 	<div class="container">
+
 		<div class="row">
-			<div class="col-md-5">
-				<h3>About</h3>
+			<div class="col-md-12">
+				<h3>The CloudDSF+ Approach</h3>
+				<p>This work is part of the master's thesis "Refinement and
+					Extension of the Cloud Decision Support Framework for Application
+					Migration to the Cloud" written by Balduin Metz at the Institute of
+					Architecture of Application Systems at the University of Stuttgart,
+					Germany. The concept as well as the CloudDSF prototype that
+					represent the basis of CloudDSF+ have been envisioned and developed
+					by Andrikopoulos et al.</p>
+				<h5>Publications</h5>
+				<ul>
+					<li><a target="_blank"
+						href="http://www.iaas.uni-stuttgart.de/RUS-data/INPROC-2013-18%20-%20Decision%20Support%20for%20Application%20Migration%20to%20the%20Cloud%20Challenges%20and%20Vision.pdf">Decision
+							Support for Application Migration to the Cloud: Challenges and
+							Vision</a></li>
+					<li><a target="_blank"
+						href="http://link.springer.com/chapter/10.1007/978-3-662-44879-3_1">CloudDSF
+							- The Cloud Decision Support Framework for Application Migration</a></li>
+				</ul>
+				<h5>Source Code</h5>
+				<ul>
+					<li><a href="https://github.com/bametz/clouddsfPlus">GitHub
+							repository of the CloudDSF+ implementation (this website)</a></li>
+					<li><a href="https://github.com/adarsow/clouddsf">GitHub
+							repository of the CloudDSF implementation</a></li>
+				</ul>
+				<p></p>
+				<p>CloudDSF+ comprises ten tasks and four main decision points
+					that are briefly described in the following to foster a common
+					understanding.</p>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-md-6">
+				<h4 class="text-center">Tasks</h4>
+				<div class="panel-group" id="accordionTasks" role="tablist"
+					aria-multiselectable="true">
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingOneTask">
+							<h4 class="panel-title">
+								<a data-toggle="collapse" data-parent="#accordionTasks"
+									href="#collapseOneTask" aria-expanded="true"
+									aria-controls="collapseOneTask">Workload Profiling</a>
+							</h4>
+						</div>
+						<div id="collapseOneTask" class="panel-collapse collapse in"
+							role="tabpanel" aria-labelledby="headingOneTask">
+							<div class="panel-body">Determining or estimating the
+								workload profile the application will have to cope with is an
+								important task directly influencing the decisions how to
+								distribute an application and which elasticity strategy to use.
+								The results of this task are used as input for performance
+								calculation and cost analysis.</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingTwoTask">
+							<h4 class="panel-title">
+								<a class="collapsed" data-toggle="collapse"
+									data-parent="#accordionTasks" href="#collapsTwoTasks"
+									aria-expanded="false" aria-controls="collapsTwoTasks"> Cost
+									Analysis</a>
+							</h4>
+						</div>
+						<div id="collapsTwoTasks" class="panel-collapse collapse"
+							role="tabpanel" aria-labelledby="headingTwoTask">
+							<div class="panel-body">Long-time operational costs as well
+								as one-time expenses for the migration have to be considered to
+								decide if a migration is beneficial from a monetary point of
+								view. Costs are influenced by the application distribution,
+								service provider/offering selection and elasticity strategy
+								decisions. Furthermore, workload profiling and effort estimation
+								and thus indirectly multitenancy requirements, influence the
+								cost analysis task as well. The strong interdependencies between
+								those tasks and a possible discrepancy between estimated and
+								actual costs lead inevitably to adjustments and feedback loops.</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingThreeTask">
+							<h4 class="panel-title">
+								<a class="collapsed" data-toggle="collapse"
+									data-parent="#accordionTasks" href="#collapseThreeTask"
+									aria-expanded="false" aria-controls="collapseThreeTask">
+									Effort Estimation</a>
+							</h4>
+						</div>
+						<div id="collapseThreeTask" class="panel-collapse collapse"
+							role="tabpanel" aria-labelledby="headingThreeTask">
+							<div class="panel-body">The amount of work required to
+								adapt the application must be estimated. Input is required from
+								the application distribution, service provider selection and
+								multi-tenancy requirements decisions since they all influence
+								the amount of adaptations. As a result, those decisions could be
+								changed to decrease the needed effort, or less likely to
+								increase it in order to realize a more sophisticated migration.</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingFourTask">
+							<h4 class="panel-title">
+								<a class="collapsed" data-toggle="collapse"
+									data-parent="#accordionTasks" href="#collapseFourTask"
+									aria-expanded="false" aria-controls="collapseFourTask">
+									Performance Prediction</a>
+							</h4>
+						</div>
+						<div id="collapseFourTask" class="panel-collapse collapse"
+							role="tabpanel" aria-labelledby="headingFourTask">
+							<div class="panel-body">Projections of the nonfunctional
+								behavior of the application after it is migrated to the cloud is
+								essential to avoid a performance degrading implementation. The
+								performance is influenced by the application distribution,
+								selected service provider/offering and the elasticity strategy.
+								Input can be provided by the workload profiling task to estimate
+								performance metrics.</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingFiveTask">
+							<h4 class="panel-title">
+								<a class="collapsed" data-toggle="collapse"
+									data-parent="#accordionTasks" href="#collapseFiveTask"
+									aria-expanded="false" aria-controls="collapseFiveTask">
+									Identification of Acceptable QoS Levels</a>
+							</h4>
+						</div>
+						<div id="collapseFiveTask" class="panel-collapse collapse"
+							role="tabpanel" aria-labelledby="headingFiveTask">
+							<div class="panel-body">Existing and planned SLAs can be
+								used to infer the needed level of QoS, e.g. in terms of
+								availability. The defined QoS metrics can affect service
+								provider/offering selection and guides the definition of a
+								suitable elasticity strategy while constraining the options for
+								application multi-tenancy.</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingSixTask">
+							<h4 class="panel-title">
+								<a class="collapsed" data-toggle="collapse"
+									data-parent="#accordionTasks" href="#collapseSixTask"
+									aria-expanded="false" aria-controls="collapseSixTask">
+									Compliance Assurance</a>
+							</h4>
+						</div>
+						<div id="collapseSixTask" class="panel-collapse collapse"
+							role="tabpanel" aria-labelledby="headingSixTask">
+							<div class="panel-body">A migrated application has to
+								remain compliant to external and internal regulations. Data
+								privacy regulations can influence or even determine the
+								distribution of the application and therefore also the possible
+								cloud providers and offerings.</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingSevenTask">
+							<h4 class="panel-title">
+								<a class="collapsed" data-toggle="collapse"
+									data-parent="#accordionTasks" href="#collapseSevenTask"
+									aria-expanded="false" aria-controls="collapseSevenTask">
+									Identification of Security Concerns</a>
+							</h4>
+						</div>
+						<div id="collapseSevenTask" class="panel-collapse collapse"
+							role="tabpanel" aria-labelledby="headingSevenTask">
+							<div class="panel-body">Despite the benefits, several risks
+								and threats come along with cloud computing. Data and
+								communications that are critical to protect have to be examined
+								regarding those threats such as data breaches, data loss,
+								insecure application programming interfaces, abuse of cloud
+								services etc.</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingEightTask">
+							<h4 class="panel-title">
+								<a class="collapsed" data-toggle="collapse"
+									data-parent="#accordionTasks" href="#collapseEightTask"
+									aria-expanded="false" aria-controls="collapseEightTask">
+									Workforce Capabilities Identification</a>
+							</h4>
+						</div>
+						<div id="collapseEightTask" class="panel-collapse collapse"
+							role="tabpanel" aria-labelledby="headingEightTask">
+							<div class="panel-body">Using cloud services, particularly
+								in the case of private and hybrid clouds, can impose new roles,
+								tasks and needed skills on the cloud consumer. An identification
+								of the workforce capabilities is therefore necessary to identify
+								skill deficiencies. Based on the revealed deficiencies costs for
+								training or knowledge acquisitions can be estimated more
+								precisely and migration decisions can be adapted. The influenced
+								decisions are mainly related to cloud hosting, roles of
+								responsibility and the elasticity automation degree.</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingNineTask">
+							<h4 class="panel-title">
+								<a class="collapsed" data-toggle="collapse"
+									data-parent="#accordionTasks" href="#collapseNineTask"
+									aria-expanded="false" aria-controls="collapseNineTask">
+									Application Analysis</a>
+							</h4>
+						</div>
+						<div id="collapseNineTask" class="panel-collapse collapse"
+							role="tabpanel" aria-labelledby="headingNineTask">
+							<div class="panel-body">Proper decision making regarding
+								application distribution can only be made based on a detailed
+								view of the current state of the application. Therefore, an
+								analysis of the existing application and its characteristics
+								(e.g. architecture, programming language, current hardware) is
+								necessary. Workload profiling, performance prediction and the
+								identification of acceptable QoS levels are related to this
+								task.</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingTenTask">
+							<h4 class="panel-title">
+								<a class="collapsed" data-toggle="collapse"
+									data-parent="#accordionTasks" href="#collapseTenTask"
+									aria-expanded="false" aria-controls="collapseTenTask">
+									Vendor Benchmark</a>
+							</h4>
+						</div>
+						<div id="collapseTenTask" class="panel-collapse collapse"
+							role="tabpanel" aria-labelledby="headingTenTask">
+							<div class="panel-body">While selecting a cloud vendor one
+								has to consider organization- specific aspects such as
+								reputation (e.g. reference projects, benchmarks) and
+								capabilities (e.g. knowledge, technical skills). The task’s
+								emphasis on nontechnical aspects is intentional in order to
+								complement the mostly technical facts, gathered from CloudDSF.
+								The combination supports a benchmark and eventually a decision
+								for an appropriate cloud vendor based on businessrelated and
+								technical considerations.</div>
+						</div>
+					</div>
+				</div>
 			</div>
 
-			<div class="col-md-5">
-
-				<h3>Disclaimer</h3>
-				
+			<div class="col-md-6">
+				<h4 class="text-center">Decision Points</h4>
+				<div class="panel-group" id="accordion" role="tablist"
+					aria-multiselectable="true">
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingOne">
+							<h4 class="panel-title">
+								<a data-toggle="collapse" data-parent="#accordion"
+									href="#collapseOne" aria-expanded="true"
+									aria-controls="collapseOne">Define Application Distribution</a>
+							</h4>
+						</div>
+						<div id="collapseOne" class="panel-collapse collapse in"
+							role="tabpanel" aria-labelledby="headingOne">
+							<div class="panel-body">The distribution of the
+								application, i.e., which parts should be migrated to the cloud
+								is an essential decision. Distribution can be decided based on
+								logical layers, physical tiers or components probably spanning
+								multiple layers and tiers. Furthermore, one of the four
+								migration types can be used.</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingTwo">
+							<h4 class="panel-title">
+								<a class="collapsed" data-toggle="collapse"
+									data-parent="#accordion" href="#collapseTwo"
+									aria-expanded="false" aria-controls="collapseTwo"> Define
+									Elasticity Strategy</a>
+							</h4>
+						</div>
+						<div id="collapseTwo" class="panel-collapse collapse"
+							role="tabpanel" aria-labelledby="headingTwo">
+							<div class="panel-body">One of the major benefits
+								associated with cloud computing is the wide range of scaling
+								possibilities. Hence, this decision point is concerned with the
+								decisions which component(s) and on what level they have to be
+								scaled. Further decisions are what kind of scaling type as well
+								as trigger should be used and the desired extend of automation.</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingThree">
+							<h4 class="panel-title">
+								<a class="collapsed" data-toggle="collapse"
+									data-parent="#accordion" href="#collapseThree"
+									aria-expanded="false" aria-controls="collapseThree"> Define
+									Multi-Tenancy Requirements </a>
+							</h4>
+						</div>
+						<div id="collapseThree" class="panel-collapse collapse"
+							role="tabpanel" aria-labelledby="headingThree">
+							<div class="panel-body">Serving multiple tenants from a
+								common pool of resources while separating them in terms of
+								communication (isolation of message exchanges) and
+								administration (tenant-specific configurations) is an important
+								aspect of cloud computing. Multitenancy can be realized on
+								different system levels and can range, for example, from
+								isolation based on an application instance to a single virtual
+								machine per tenant on the virtualization level.</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading" role="tab" id="headingFour">
+							<h4 class="panel-title">
+								<a class="collapsed" data-toggle="collapse"
+									data-parent="#accordion" href="#collapseFour"
+									aria-expanded="false" aria-controls="collapseFour"> Select
+									Service Provider / Offering </a>
+							</h4>
+						</div>
+						<div id="collapseFour" class="panel-collapse collapse"
+							role="tabpanel" aria-labelledby="headingFour">
+							<div class="panel-body">This decision point covers
+								fundamental decisions regarding a migration. For instance, the
+								deployment model, the service model and the hosting option.
+								Moreover, decisions with a stronger organizational view, such as
+								the definition of roles of responsibilities, pricing models, the
+								selection of a particular cloud vendor and where the resources
+								have to be located are part of this decision point.</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
