Layout and content change for toolbars HTML formatting

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -64,14 +64,17 @@
 		<div class="row">
 			<div class="col-md-12">
 				<h3>The CloudDSF+ Approach</h3>
-				<p>This work is part of the master's thesis "Refinement and
-					Extension of the Cloud Decision Support Framework for Application
-					Migration to the Cloud" written by Balduin Metz at the Institute of
-					Architecture of Application Systems at the University of Stuttgart,
-					Germany. The concept as well as the CloudDSF prototype that
-					represent the basis of CloudDSF+ have been envisioned and developed
-					by Andrikopoulos et al.</p>
-				<h5>Publications</h5>
+				<p>This website has been developed as part of the master's
+					thesis "Refinement and Extension of the Cloud Decision Support
+					Framework for Application Migration to the Cloud" written by
+					Balduin Metz at the Institute of Architecture of Application
+					Systems at the University of Stuttgart, Germany. The concept as
+					well as the CloudDSF prototype that served as the basis of
+					CloudDSF+ have been envisioned and developed by Andrikopoulos et
+					al.</p>
+				<h5>
+					<strong>Publications</strong>
+				</h5>
 				<ul>
 					<li><a target="_blank"
 						href="http://www.iaas.uni-stuttgart.de/RUS-data/INPROC-2013-18%20-%20Decision%20Support%20for%20Application%20Migration%20to%20the%20Cloud%20Challenges%20and%20Vision.pdf">Decision
@@ -81,7 +84,9 @@
 						href="http://link.springer.com/chapter/10.1007/978-3-662-44879-3_1">CloudDSF
 							- The Cloud Decision Support Framework for Application Migration</a></li>
 				</ul>
-				<h5>Source Code</h5>
+				<h5>
+					<strong>Source Code</strong>
+				</h5>
 				<ul>
 					<li><a href="https://github.com/bametz/clouddsfPlus">GitHub
 							repository of the CloudDSF+ implementation (this website)</a></li>
