--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -73,7 +73,7 @@
 				<p class="lead">CloudDSF+ provides decision makers with the
 					means to guide them through necessary decisions that have to be
 					specified prior to an actual application migration to the cloud in
-					order to derive sound migration strategies.</p>
+					order to derive a migration strategy.</p>
 				<p>
 					CloudDSF+ represents a refinement and extension of the previously
 					developed <a href="www.clouddsf.com">Cloud Decision Support
@@ -138,7 +138,6 @@
 			</div>
 
 		</div>
-
 	</div>
 
 	<footer class="footer">
