Content update of layout and CloudDSF+ descriptions Rename of knowledgeBase.html to kbVisualizer.html

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -47,7 +47,7 @@
 									CloudDSF+</strong></span></a></li>
 					<li><a href="./kbNavigator.html"><span>KB Navigator</span>
 					</a></li>
-					<li><a href="./knowledgeBase.html"><span>KB
+					<li><a href="./kbVisualizer.html"><span>KB
 								Visualizer</span> </a></li>
 					<li><a href="./cloudDSFVisualizations.html"><span>CloudDSF
 								Visualizations</span> </a></li>
@@ -68,10 +68,14 @@
 					thesis "Refinement and Extension of the Cloud Decision Support
 					Framework for Application Migration to the Cloud" written by
 					Balduin Metz at the Institute of Architecture of Application
-					Systems at the University of Stuttgart, Germany. The concept as
-					well as the CloudDSF prototype that served as the basis of
-					CloudDSF+ have been envisioned and developed by Andrikopoulos et
-					al.</p>
+					Systems at the University of Stuttgart, Germany.</p>
+				<p>
+					CloudDSF+ therefore represents a refinement and extension of the
+					previously developed <a href="www.clouddsf.com">Cloud Decision
+						Support Framework (CloudDSF)</a>. The underlying concept of CloudDSF
+					as well as CloudDSF+ has been envisioned and developed by
+					Andrikopoulos et al.
+				</p>
 				<h5>
 					<strong>Publications</strong>
 				</h5>
@@ -95,8 +99,11 @@
 				</ul>
 				<p></p>
 				<p>CloudDSF+ comprises ten tasks and four main decision points
-					that are briefly described in the following to foster a common
-					understanding.</p>
+					which subsume 16 decisions which in turn subsume multiple outcomes.
+					The decisions as well as outcomes are strongly interconnected among
+					each other and form a dense network of relationships. The tasks and
+					decision points are briefly described in the following to foster a
+					common understanding.</p>
 			</div>
 		</div>
 
