--- a/WebContent/cloudDSFVisualizations.html
+++ b/WebContent/cloudDSFVisualizations.html
@@ -55,7 +55,7 @@
 									CloudDSF+</strong></span></a></li>
 					<li><a href="./kbNavigator.html"><span>KB
 								Navigator</span> </a></li>
-					<li><a href="./knowledgeBase.html"><span>KB
+					<li><a href="./kbVisualizer.html"><span>KB
 								Visualizer</span> </a></li>
 					<li class="active"><a href="./cloudDSFVisualizations.html"><span>CloudDSF
 								Visualizations</span> </a></li>
@@ -90,7 +90,7 @@
 					<strong>These visualizations have been included from the
 						old <a href="www.clouddsf.com">CloudDSF Prototype</a> with minor
 						adaptations only, hence displaying errors may occur. The
-						underlying data has been updated to the new refined knowledge
+						underlying data has been updated to the new refined CloudDSF+ knowledge
 						base. However, All relationship types have been mapped to
 						influencing relations due to the limitations of the layout.
 						Furthermore, all tasks as well as the relations between tasks and
