--- a/WebContent/kbNavigator.html
+++ b/WebContent/kbNavigator.html
@@ -54,7 +54,7 @@
 									CloudDSF+</strong></span></a></li>
 					<li class="active"><a href="./kbNavigator.html"><span>KB
 								Navigator</span> </a></li>
-					<li><a href="./knowledgeBase.html"><span>KB
+					<li><a href="./kbVisualizer.html"><span>KB
 								Visualizer</span> </a></li>
 					<li><a href="./cloudDSFVisualizations.html"><span>CloudDSF
 								Visualizations</span> </a></li>
@@ -80,7 +80,7 @@
 					all selected outcomes or only of the last chosen outcome should be
 					shown can be toggled with the respective controls. The same applies
 					to the visualization of additional relationship types that do not
-					directly influence the selection.</p>
+					directly influence the selections.</p>
 			</div>
 		</div>
 
