--- a/WebContent/kbVisualizer.html
+++ b/WebContent/kbVisualizer.html
@@ -52,7 +52,7 @@
 									CloudDSF+</strong></span></a></li>
 					<li><a href="./kbNavigator.html"><span>KB Navigator</span>
 					</a></li>
-					<li class="active"><a href="./knowledgeBase.html"><span>KB
+					<li class="active"><a href="./kbVisualizer.html"><span>KB
 								Visualizer</span> </a></li>
 					<li><a href="./cloudDSFVisualizations.html"><span>CloudDSF
 								Visualizations</span> </a></li>
@@ -90,8 +90,9 @@
 				<div class="col-lg-10 col-lg-offset-1 vspace">
 					<h4>Hierarchical Layout</h4>
 					<p>The hierarchical layot shows the structure of CloudDSF+ with
-						Decision Points, Decisions and Outcomes. For easier navigation all
-						elements can be toggled at once with the respective controls.</p>
+						decision points, decisions and outcomes. For easier navigation all
+						mentionded elements can be toggled at once with the respective
+						button.</p>
 				</div>
 			</div>
 			<!-- Toolbar functions -->
@@ -116,11 +117,11 @@
 			<div class="row">
 				<div class="col-lg-10 col-lg-offset-1 vspace">
 					<h4>Decision Relations Layout</h4>
-					<p>The visualization shows all decisions of CloudDSF+ clustered
-						by their respective decision points. All identified relationship
-						types can be toggled through the respective controls. Clicking on
-						a decision will highlight its outgoing relations while fading out
-						everything else.</p>
+					<p>The decision relations layout shows all decisions of
+						CloudDSF+ clustered by their respective decision points. All
+						identified relationship types can be toggled through the
+						respective controls. Clicking on a decision will highlight its
+						outgoing relations while fading out everything else.</p>
 				</div>
 			</div>
 			<!-- Toolbar functions -->
@@ -145,16 +146,16 @@
 			<div class="row">
 				<div class="col-lg-10 col-lg-offset-1 vspace">
 					<h4>Outcome Relations Layout</h4>
-					<p>This visualization shows all outcomes of CloudDSF+ grouped
-						by their decision as well as decision point. Clicking on an
-						outcome will highlight its outgoing relations depending on the
-						selection of relationship types that can be toggled with the
-						respective controls. All outcomes can be selected or deselected at
-						once, for instance, to show all including relations between
-						outcomes. Double clicking a decision or decision point will
-						collapse it to enable a more coarse grained view. In addition, the
-						complete layout can be fixed or loosened to enable a fast
-						rearranging of the visualization.</p>
+					<p>This outcome relations layout shows all outcomes of
+						CloudDSF+ grouped by their decision as well as decision point.
+						Clicking on an outcome will highlight its outgoing relations
+						depending on the selection of relationship types that can be
+						toggled with the respective controls. All outcomes can be selected
+						or deselected at once, for instance, to show all including
+						relations between outcomes. Double clicking a decision or decision
+						point will collapse it to enable a more coarse or fine grained
+						view. In addition, the layout can be fixed or loosened to enable a
+						fast and easy rearranging.</p>
 				</div>
 			</div>
 			<!-- Toolbar functions -->
