--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -47,7 +47,7 @@
 									CloudDSF+</strong></span></a></li>
 					<li><a href="./kbNavigator.html"><span>KB Navigator</span>
 					</a></li>
-					<li><a href="./knowledgeBase.html"><span>KB
+					<li><a href="./kbVisualizer.html"><span>KB
 								Visualizer</span> </a></li>
 					<li><a href="./cloudDSFVisualizations.html"><span>CloudDSF
 								Visualizations</span> </a></li>
@@ -70,20 +70,11 @@
 
 		<div class="row">
 			<div class="col-md-12 vspace">
-				<p class="lead">CloudDSF+ provides decision makers with the
-					means to guide them through necessary decisions that have to be
-					specified prior to an actual application migration to the cloud in
-					order to derive a migration strategy.</p>
-				<p>
-					CloudDSF+ represents a refinement and extension of the previously
-					developed <a href="www.clouddsf.com">Cloud Decision Support
-						Framework (CloudDSF)</a>. The underlying concept of CloudDSF as well
-					as CloudDSF+ has been envisioned and developed by Andrikopoulos et
-					al. CloudDSF+ comprises ten tasks and four main decision points
-					which subsume 16 decisions which in turn subsume multiple outcomes.
-					The decisions as well as outcomes are strongly interconnected among
-					each other and form a dense network of relationships. <a
-						href="./about.html">Further details...</a>
+				<p class="lead">
+					CloudDSF+ provides decision makers with the means to guide them
+					through necessary decisions that have to be specified prior to an
+					actual application migration to the cloud in order to derive a
+					migration strategy. <a href="./about.html">Read more...</a>
 				</p>
 			</div>
 		</div>
@@ -107,7 +98,7 @@
 
 			<div class="col-xs-8 col-sm-6 col-md-4">
 				<div class="thumbnail">
-					<a href="./knowledgeBase"><img src="./img/kbVisualizer.jpg"
+					<a href="./kbVisualizer.html"><img src="./img/kbVisualizer.jpg"
 						alt="KB Visualizer"></a>
 					<div class="caption">
 						<h3>KB Visualizer</h3>
