Content update of CloudDSF+ description

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -64,11 +64,13 @@
 		<div class="row">
 			<div class="col-md-12">
 				<h3>The CloudDSF+ Approach</h3>
-				<p>This website has been developed as part of the master's
-					thesis "Refinement and Extension of the Cloud Decision Support
-					Framework for Application Migration to the Cloud" written by
-					Balduin Metz at the Institute of Architecture of Application
-					Systems at the University of Stuttgart, Germany.</p>
+				<p>
+					This website has been developed as part of the master's thesis <i>"Refinement
+						and Extension of the Cloud Decision Support Framework for
+						Application Migration to the Cloud"</i> written by Balduin Metz at the
+					Institute of Architecture of Application Systems at the University
+					of Stuttgart, Germany.
+				</p>
 				<p>
 					CloudDSF+ therefore represents a refinement and extension of the
 					previously developed <a href="www.clouddsf.com">Cloud Decision
